Fix to below-messages spacing by '''jas8522'''. Fixes #8940

--- a/Resources/Message Styles/Smooth Operator.AdiumMessageStyle/Contents/Resources/main.css
+++ b/Resources/Message Styles/Smooth Operator.AdiumMessageStyle/Contents/Resources/main.css
@@ -102,7 +102,7 @@ body {
 	}    
    
 .text {
-	padding: 6px 40px 0 0;
+	padding: 6px 40px 6px 0;
 	margin: 0;
 	overflow: auto;
 }
